--- a/BattleshipC++/CMakeLists.txt
+++ b/BattleshipC++/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (BattleshipC++ "BattleshipC++.cpp" "BattleshipC++.h" "Helper.h" "UserInteract.cpp" "UserInteract.h" "Mygameclass.h" "Mygameclass.cpp")
+add_executable (BattleshipC++ "BattleshipC++.cpp" "BattleshipC++.h" "Helper.h" "UserInteract.cpp" "UserInteract.h" "Mygameclass.h" "Mygameclass.cpp" "Temp.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET BattleshipC++ PROPERTY CXX_STANDARD 20)
